    installer now also copy the DLL files inpout32.dll
    (32-bit) and inpoutx64.dll (64-bit) to the DOSBox-X
    install directory for use with the direct parallel
    port passthrough feature. (Wengier)
  - Improved Flatpak support for Linux. (rderooy)
  - Fixed shelling from programs may not work when the
    shell config option is set. (Wengier)
  - Applied hack to allow the low DMA channel detection
    in the SB16 DIAGNOSE program to work. (Wengier)
  - The default setting of the clip_paste_speed option
    has been changed from 20 to 30, which will help
    prevent lost keystrokes when pasting from the host
    clipboard for some programs. (Wengier)
  - Added support for the XDG_DATA_HOME environment
    variable for config directory in Linux. (rderooy)
  - Added support for compiling with pcap for Windows
    MinGW builds. (Jookia)
  - Added config option "windowposition" (in [sdl]
    section) to set the window position at startup in
    the positionX,positionY format. (tomba4)
  - Added config option "raw_mouse_input" (in [sdl]
    section; SDL2 builds only) to bypass the operating
    system's mouse acceleration & sensitivity settings.
    Implemented by NicknineTheEagle.
  - Integrated SVN commits (Allofich)
    - r4371: Fix regression in Clue: Master Detective.
    - r4370: As an adjunct to r4369, make the reference
      counts of standard device handles equivalent to
      those of real DOS.
    - r4369: Compatible side-effect behavior of DOS in
      the file close function.
    - r4368: Improve error codes for some DOS file functions.
    - r4367: Change FPU_FBST to only write 18 decimals
      instead of the wrongly 19, this makes it possible
      to switch 64 integers which in turn fixes some
      rounding issues. (jmarsh)
    - r4282,r4283: Switch to a different way to calculate
      DBOPL table offsets.
    - r4280: Prevent GenerateDMASound from running with
      input of 0.
    - r4279: Remove DMA_TRANSFEREND and replace with